cluster/apps/applications/firefly-iii/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: firefly-iii
spec:
  rules:
  - host: firefly.home.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firefly-iii
            port:
              name: http
